--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Functions</title>
+    <script src="app.js"></script>
   </head>
   <body>
     <main style="display: flex; justify-content: center; align-items: center; text-align: center;">
